cmake_minimum_required(VERSION 3.5)
project(ubx_ros)

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclpy REQUIRED)

# install dirs
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)

# python
ament_python_install_package(${PROJECT_NAME})

install(PROGRAMS  
  ubx_ros/ubx_node.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME ubx_node
)

ament_package()